# SideQick

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  clang-format-check.yml  cmake-build.yml  cmake-single-platform.yml  process-binaries.yml
Source/: DeviceResponse.h  Display.cpp  Display.h  Logo.cpp  Logo.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiSysexProcessor.cpp  MidiSysexProcessor.h  PannelButton.cpp  PannelButton.h  ProgramParser.cpp  ProgramParser.h
